--- a/index.yaml
+++ b/index.yaml
@@ -1,3 +1,5 @@
 apiVersion: v1
-entries: {}
-generated: "2020-12-09T14:00:07.919993+01:00"
+entries:
+    urls:
+        - https://raw.github.com/halaoner/helm-test/main  
+generated: "2020-12-09T14:20:45.380408+01:00"
