--- a/index.yaml
+++ b/index.yaml
@@ -1,5 +1,3 @@
 apiVersion: v1
-entries:
- urls:
-    - https://raw.github.com/halaoner/helm-test/main  
-generated: "2020-12-09T14:20:45.380408+01:00"
+entries: {}
+generated: "2020-12-09T14:30:15.656473+01:00"
