--- a/nginx/Chart.yaml
+++ b/nginx/Chart.yaml
@@ -4,3 +4,6 @@ description: My first helm chart
 type: application
 version: 0.1.0
 appVersion: 1.0.0
+icon: https://upload.wikimedia.org/wikipedia/commons/thumb/c/c5/Nginx_logo.svg/500px-Nginx_logo.svg.png
+keywords:
+    - nginx
