--- a/nginx/Chart.yaml
+++ b/nginx/Chart.yaml
@@ -7,3 +7,5 @@ appVersion: 1.0.0
 icon: https://upload.wikimedia.org/wikipedia/commons/thumb/c/c5/Nginx_logo.svg/500px-Nginx_logo.svg.png
 keywords:
     - nginx
+sources:
+ - https://github.com/halaoner/helm-test
